Address nitpick in JavaModManager
Use getDeclaredConstructor().newInstance() instead of newInstance()
which is deprecated in modern Java.

Co-authored-by: garpfield <222465378+garpfield@users.noreply.github.com>